--- a/Intel8086/Intel8086/Form1.resx
+++ b/Intel8086/Intel8086/Form1.resx
@@ -93,4 +93,14 @@
   <metadata name="AL_Textbox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Available commands:
+
+mov {register index} {register index} - moves value from one register to the other
+mov {register index} {value} - moves value to register
+xchg {register index} {register index} - exchanges values between registers
+zero - fills all registers with 0
+random - fills the entire register with random hex values
+</value>
+  </data>
 </root>
