--- a/Intel8086/Intel8086/Form1.resx
+++ b/Intel8086/Intel8086/Form1.resx
@@ -60,11 +60,14 @@
   <data name="Command_Desc_Lbl.Text" xml:space="preserve">
     <value>Available commands:
 
+zero - fills all registers with 0
+random - fills the entire register with random hex values
+
 mov {register index} {register index} - moves value from one register to the other
 mov {register index} {value} - moves value to register
 xchg {register index} {register index} - exchanges values between registers
-zero - fills all registers with 0
-random - fills the entire register with random hex values
+push {X register index} - moves the value of a register to the stack
+pop {X register index} - moves the value from the stack to the register
 </value>
   </data>
 </root>
